k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: nestjs-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000   
      nodePort: 30080
