k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: domain.tld      
      http:
        paths:
          - path: /redis
            pathType: Prefix
            backend:
              service:
                name: my-service      
                port:
                  number: 80
